einstellung_derive/src/trybuild_tests/duplicate_default_attribute.stderr
error: Duplicate field `default`
 --> src/trybuild_tests/duplicate_default_attribute.rs
  |
  |     #[config(default = 8080, default = 9090)]
  |                              ^^^^^^^
